# python-lab

./: .gitignore  lab-notebook.ipynb  main.py  notebook.ipynb  notes.md  pyproject.toml  readme.md  requirements.txt
100 Days of Python/: workout-app.py
100 Days of Python/CoffeeMachine/: check_ingredients.py  menu.py
100 Days of Python/HandleFiles/: main.py
100 Days of Python/SnakeGame/: snake.py
100 Days of Python/Welcome_Tkinter/: data.json  handle_password.py
Audio/: amplitude_array.py  audio_notebook.ipynb  python_midi.py
Notes/: Dictionaries.py  For Loops.py  fibonacci.py
Projects/100 Days of Python/: workout-app.py
Projects/100 Days of Python/CoffeeMachine/: handle_transaction.py  (+2 more)
Projects/HelloLangChain/: main.py
Projects/iss_overhead/: main.py
Projects/learn-ai/: data_preprocessing.py  slot-machines.py
Projects/python-audio/: amplitude_array.py  audio_notebook.ipynb
_notes/: CSV.py  CaesarCypher.py  FizzBuzzFirst.py  Password Generator.py  Renamer.py  Strings and Input.py  StudentGrades.py  _note.py  decorator factory.py  email.py  error_patterns.py  factorial.py  geometry.py  get_primes.py
assets/text/: example1.txt
blender/: send_to_houdini.py
file_renamer/: file_renamer.py
learn-ai/thompson_sampling/: thompson_sampling.ipynb
nlp/: __init__.py  preprocessing.py
nlp/preprocessing/: __init__.py  lemmatization.py  ngrams.py
notebooks/: 3.3+NER+new.ipynb
python-audio/: amplitude_array.py  audio_notebook.ipynb
spotify-time-machine/: main.py
utility/: timer.py
web_scraping/: web-scrape.py  webscraping.ipynb  website.html
(+29 files in other folders)
