[project]
name = "python-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.3",
]
